refactor(hospital): migrate to Redis cache and optimize TTL for external API